<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="100dp"
    android:gravity="top|center"
    android:orientation="vertical">


    <TextView
        android:id="@+id/historical_weather"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/historical_weather_title"
        android:layout_marginBottom="100dp"
        android:textSize="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/month_text"
            android:textSize="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/month_text"
            android:layout_marginRight="10dp"/>

        <TextView
            android:id="@+id/day_text"
            android:textSize="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day_text"
            android:layout_marginLeft="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

    <Spinner
        android:id="@+id/month_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/month_spinner"
        android:layout_marginRight="20dp"/>

    <Spinner
        android:id="@+id/day_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/day_spinner"
        android:layout_marginLeft="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/historical_temp"
            android:textSize="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/historical_temp"
            android:layout_marginTop="65dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/avg_temp"
            android:textSize="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Average: 38 °F"
            android:layout_marginTop="65dp"/>

        <TextView
            android:id="@+id/low_temp"
            android:textSize="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Low: 11 °F"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/high_temp"
            android:textSize="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="High: 55 °F"
            android:layout_marginTop="5dp"/>

    </LinearLayout>

</LinearLayout>